review_tool/test-cases/bad/bad-console.js
function processData(data) {
  console.log('Processing:', data);
  console.error('Error occurred');
  console.warn('Warning message');
  
  return data.items;
}
